cluster/redcloud/apps/openspeedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  selector:
    app: openspeedtest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
